[package]
name = "matuv"
version = "0.1.0"
edition = "2024"
description = "创建 uv 和 maturin 的混合项目模板"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11.0"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }

[profile.release]
opt-level = 3
